agregado de busqueda por apellido y apellido con nombre

--- a/pages/privado.html
+++ b/pages/privado.html
@@ -68,6 +68,8 @@
         <form> 
             <button class="item-button" onclick="muestraMensNuevos()">Lee nuevo(s) mensaje(s) </button>
             <button class="item-button" onclick="muestraMensViejos()">Lee mensaje(s) viejo(s)</button>
+            <button class="item-button" onclick="muestraMensApellido()">Lee mensaje(s) apellido</button>
+            <button class="item-button" onclick="muestraMensApellidoNombre()">Lee mensaje(s) nombre y apellido</button>
             
         </form>
         
