definicion de eventos botones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
 
         <h2>Contáctanos</h2>
 <!--Form-->
-        <form class="wow animate__zoomIn">
+        <form class="wow animate__zoomIn" id="formContacto">
 <!--Frist form block -->            
             <fieldset class="cardBg ownCard mb-4 text-start">
                 <legend>Datos Personales</legend>
@@ -156,8 +156,8 @@
             </fieldset>
 <!--buttons block-->        
             <div class="buttonBlock">
-                <!--<input class="item-button" type="Submit" id="submit"-->
-                <button class="item-button" onclick=nuevoMensajeClick()>Envio</button>
+                <input class="item-button" type="Submit" id="submit">
+                <!-- <button class="item-button" id="formSubmit">Envio</button> -->
                 <button class="item-button" type="reset" value="Reset"> Borrar</button>
             </div>     
         
