--- a/pages/privado.html
+++ b/pages/privado.html
@@ -37,7 +37,7 @@
 
         <h2>Ingreso</h2>
 <!--Form-->
-        <form onsubmit="return false">
+        <form id="privateForm" onsubmit="return false">
 <!--Frist form block -->            
             <fieldset class="cardBg ownCard mb-4 text-start">
                 <legend>Inserte usuario</legend>
@@ -62,7 +62,7 @@
             </fieldset>
         <!--buttons block-->        
             <div class="buttonBlock">
-                <button class="item-button" onclick="privateZone()" id="submit">Enviar </button>   
+                <button class="item-button" id="submit">Enviar </button>   
                 <button class="item-button" type="reset" value="Reset">Borrar</button>
             </div>     
         </form>
