--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="contacto,mail,psicologos,terapia,psicologa, online, barato ,terapia, pesos, argentina, español">
     <meta name="author" content="Enrico Tenconi">
     <link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/minStyles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="../img/logo.ico" sizes="64x64">
     <title>Psicólogos On Line Rosario - Contacto</title>
 </head>
@@ -185,6 +185,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="../js/contacto.js"></script>
+    <script src="../js/modal.js"></script>
 
 
 </body>
