--- a/pages/privado.html
+++ b/pages/privado.html
@@ -68,37 +68,16 @@
         </form>
     </article>
     
-<!-- Modal -->
-<!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Understood</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-   -->
+
     
 </main>
 
-<!--WOW & Bootstrap JS-->
-    <script src="../js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
+
     <script src="../js/lectura.js"></script>
     <script src="../js/articleBottons.js"></script>
     <script src="../js/carouselCreate.js"></script>
+    <script src="../js/borrado.js"></script>
+    <script src="../js/modal.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
