--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -184,6 +184,8 @@
         new WOW().init();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
+    <script src="../js/sessionStor.js"></script>
     <script src="../js/contacto.js"></script>
     <script src="../js/modal.js"></script>
 
