--- a/pages/privado.html
+++ b/pages/privado.html
@@ -72,7 +72,7 @@
     
 </main>
 
-
+    <script src="../js/sessionStor.js"></script>
     <script src="../js/lectura.js"></script>
     <script src="../js/articleBottons.js"></script>
     <script src="../js/carouselCreate.js"></script>
