--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="contacto,mail,psicologos,terapia,psicologa, online, barato ,terapia, pesos, argentina, español">
     <meta name="author" content="Enrico Tenconi">
     <link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/minStyles.css">
     <link rel="icon" type="image/x-icon" href="../img/logo.ico" sizes="64x64">
     <title>Psicólogos On Line Rosario - Contacto</title>
 </head>
