--- a/pages/privado.html
+++ b/pages/privado.html
@@ -10,7 +10,7 @@
     
 
     <link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/styles.css"  >
+    <link rel="stylesheet" href="../css/minStyles.css"  >
     <link rel="icon" type="image/x-icon" href="../img/logo.ico" sizes="64x64">
 
     <title>Psicólogos On Line Rosario - Reservado</title>
