--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -114,10 +114,12 @@
     </footer>
 <!--WOW & Bootstrap JS-->
     <script src="../js/wow.min.js"></script>
+    <script src="../js/deslog.js"></script>
     <script>
         new WOW().init();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
 </html>
