--- a/pages/privado.html
+++ b/pages/privado.html
@@ -74,10 +74,10 @@
 
     <script src="../js/sessionStor.js"></script>
     <script src="../js/lectura.js"></script>
-    <script src="../js/articleBottons.js"></script>
+    <script src="../js/deslog.js"></script>
+    <script src="../js/privado.js"></script>
     <script src="../js/carouselCreate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
